<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">CommUniDrive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_logo">User profile picture</string>
    <string name="nav_header_username">Username</string>
    <string name="nav_header_gotoprofile">Go to profile</string>

    <string name="nav_header_anon_logo">Anonymous user profile picture</string>
    <string name="nav_header_anon_username">Anonymous User</string>
    <string name="nav_header_anon_gotoprofile">Log in to view profile</string>

    <string name="drawer_logout">LOGOUT</string>
    <string name="home">Home</string>
    <string name="carica_appunti">Upload Notes</string>
    <string name="cronologia">History</string>
    <string name="lingua">Language</string>
    <string name="effettua_ricerca">Perform search</string>
    <string name="filtri">FILTERS</string>
    <string name="risultati_trovati">Results found</string>
    <string name="filtro">Filter</string>
    <string name="universita">University: </string>
    <string name="dipartimento">Department: </string>
    <string name="a_a">Academic year: </string>
    <string name="professore">Professor:</string>
    <string name="lingua2">Language:</string>
    <string name="applica_filtri_e_cerca">Apply Filters and Search</string>
    <string name="resetta_i_filtri">Reset Filters</string>
    <string name="corso">Course:</string>
    <string name="tipologia">Type:</string>
    <string name="seleziona_il_file">Select File</string>
    <string name="nessun_file_selezionato">No file selected</string>
    <string name="consento_di_rendere_la_mia_mail_pubblica">I consent to make my email public.</string>
    <string name="nome_del_materiale">Material Name:*</string>
    <string name="pubblica">PUBLISH</string>
    <string name="seleziona_l_universit">Select University*</string>
    <string name="seleziona_il_dipartimento">Select Department*</string>
    <string name="seleziona_il_corso">Select Course*</string>
    <string name="seleziona_l_a_a">Select Academic Year*</string>
    <string name="seleziona_il_professore">Select Professor</string>
    <string name="seleziona_la_tipologia">Select Type*</string>
    <string name="seleziona_la_lingua">Select Language*</string>
    <string name="scarica">DOWNLOAD</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="nome">name</string>
    <string name="cognome">surname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descrizione_del_materiale">Material Description*</string>
    <string name="caricato_da">Uploaded by </string>
    <string name="in_data"> on </string>
    <string name="universit">University: </string>
    <string name="dipartimentos">Degree: </string>
    <string name="corsos">Course: </string>
    <string name="anno_accademico">Academic Year: </string>
    <string name="tipologia_materiale">Material Type: </string>
    <string name="descrizione">Description: </string>
    <string name="nome_utente">Username</string>
    <string name="passwords">Password</string>
    <string name="continua_in_modalit_anonima">Continue in anonymous mode!</string>
    <string name="recupera_password">Recover password!</string>
    <string name="login">Login</string>
    <string name="oppure_registrati">Or register</string>
    <string name="registrati">Register</string>
    <string name="logins">Login</string>
    <string name="accedi">Access</string>
    <string name="registratis">Register</string>
    <string name="profilo">Profile</string>
    <string name="aggiungi_dettagli">Add Details</string>
    <string name="modifica_password">Change Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_now">Login now!</string>
    <string name="cronologia_download">Download History</string>
    <string name="supporto">Support</string>
    <string name="carica">Upload</string>
    <string name="ricerca">Search</string>
</resources>