<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/test"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/titleText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/logins"
                android:textColor="#ffffff"
                android:textSize="30sp" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        tools:context=".Login">


        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/nome_utente"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:minHeight="48dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/passwordLogin"
            android:hint="@string/passwords"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black"
            android:minHeight="48dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/homeAnonBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continua_in_modalit_anonima"
                android:textColor="#00BBFF"
                android:layout_marginStart="16dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginStart="60dp"
                android:id="@+id/registerNowBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recupera_password"
                android:textColor="#00BBFF"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/test"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">


            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/forgotPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oppure_registrati"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/test"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/registrati"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>


