<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <!-- Sezione del nome del file -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:maxLength="40"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:hint="@string/nome_del_materiale" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sezione Università -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uni_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/nome_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <AutoCompleteTextView
                android:id="@+id/uni_autocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:padding="16dp"
                android:hint="@string/seleziona_l_universit"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:completionThreshold="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sezione Dipartimento -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dep_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/uni_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <AutoCompleteTextView
                android:id="@+id/dep_autocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:padding="16dp"
                android:hint="@string/seleziona_il_dipartimento"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:completionThreshold="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sezione Corsi -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/courses_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/dep_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <AutoCompleteTextView
                android:id="@+id/courses_autocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:padding="16dp"
                android:hint="@string/seleziona_il_corso"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:completionThreshold="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sezione Anno accademico e professore -->
        <LinearLayout
            android:id="@+id/aa_prof_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/courses_layout"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prof_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:layout_weight="0.4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <AutoCompleteTextView
                    android:id="@+id/prof_autocompletetextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="16dp"
                    android:hint="@string/seleziona_il_professore"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:completionThreshold="0"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aa_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:layout_weight="0.6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.communidrive.InstantAutoComplete
                    android:id="@+id/aa_autocompletetextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="16dp"
                    android:hint="@string/seleziona_l_a_a"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:completionThreshold="0"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Sezione Tipologia e Lingua -->
        <LinearLayout
            android:id="@+id/type_lang_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/aa_prof_linearLayout"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:layout_weight="0.4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.communidrive.InstantAutoComplete
                    android:id="@+id/type_autocompletetextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="16dp"
                    android:hint="@string/seleziona_la_tipologia"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:completionThreshold="0"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lang_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:layout_weight="0.6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.communidrive.InstantAutoComplete
                    android:id="@+id/lang_autocompletetextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="16dp"
                    android:hint="@string/seleziona_la_lingua"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:completionThreshold="0"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/accept_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/consento_di_rendere_la_mia_mail_pubblica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_lang_linearLayout"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>

        <Button
            android:id="@+id/filePicker_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/seleziona_il_file"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
            app:layout_constraintTop_toBottomOf="@+id/accept_checkbox" />

        <TextView
            android:id="@+id/filePicker_path_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/nessun_file_selezionato"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/filePicker_Button"
            app:layout_constraintTop_toBottomOf="@+id/accept_checkbox" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@+id/filePicker_Button" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pubblica"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
